hphp/hack/test/typecheck/shape/shape_field_check/key_exists_unset_key_open_shape.php.like_types.exp
File "key_exists_unset_key_open_shape.php", line 7, characters 28-29:
Invalid argument (Typing[4110])
File "Shapes.hhi", line 54, characters 36-36:
Some type constraint(s) are violated here
File "Shapes.hhi", line 54, characters 36-36:
T is a constrained type parameter
File "key_exists_unset_key_open_shape.php", line 7, characters 28-29:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "Shapes.hhi", line 54, characters 36-36:
But got dynamic
